--- a/Corrections/artists_songs_player_search/public/index.html
+++ b/Corrections/artists_songs_player_search/public/index.html
@@ -141,8 +141,8 @@
           <li>
             <div class="list-item-title"></div>
             <div class="list-item-actions">
-              <button type="button" class="icon-button playlist-button">
-                <span class="material-icons">playlist_add</span>
+              <button type="button" class="icon-button fav-button">
+                <span class="material-icons">favorite_border</span>
               </button>
               <button type="button" class="icon-button play-button">
                 <span class="material-icons">play_arrow</span>
@@ -156,87 +156,19 @@
 
       <section id="list-section">
         <h4>
-          Artistes > Kungs
-          <!-- Exemple avec un bouton au bout du titre. Pour l'ajout de playlists, par exemple -->
-          <button type="button" class="icon-button align-right">
-            <span class="material-icons">add</span>
-          </button>
+          Favoris <!-- Exemple avec un bouton au bout du titre. Pour l'ajout de playlists, par exemple -->
         </h4>
 
-        <ul class="list">          <!-- Exemple avec un lien et un chevron (par exemple dans la liste de playlists, le lien qui mène à son contenu-->
-          <li>
-            <a href="#">
-              <div class="list-item-title">Never going home</div>
-              <div class="list-item-actions">
-                <span class="material-icons">chevron_right</span>
-              </div>
-            </a>
-          </li>
-
-          <!-- Exemple sans lien -->
-          <li>
-            <div class="list-item-title">Never going home</div>
-            <div class="list-item-actions">
-              <button type="button" class="icon-button">
-                <span class="material-icons">playlist_add</span>
-              </button>
-              <button type="button" class="icon-button">
-                <span class="material-icons">play_arrow</span>
-              </button>
-            </div>
-          </li>
-          <li>
-            <div class="list-item-title">Never going home</div>
-            <div class="list-item-actions">
-              <button type="button" class="icon-button">
-                <span class="material-icons">playlist_add</span>
-              </button>
-              <button type="button" class="icon-button">
-                <span class="material-icons">play_arrow</span>
-              </button>
-            </div>
-          </li>
-          <li>
-            <div class="list-item-title">Never going home</div>
-            <div class="list-item-actions">
-              <button type="button" class="icon-button">
-                <span class="material-icons">playlist_add</span>
-              </button>
-              <button type="button" class="icon-button">
-                <span class="material-icons">play_arrow</span>
-              </button>
-            </div>
-          </li>
-          <li>
-            <div class="list-item-title">Never going home</div>
-            <div class="list-item-actions">
-              <button type="button" class="icon-button">
-                <span class="material-icons">playlist_add</span>
-              </button>
-              <button type="button" class="icon-button">
-                <span class="material-icons">play_arrow</span>
-              </button>
-            </div>
-          </li>
-          <li>
-            <div class="list-item-title">Never going home</div>
-            <div class="list-item-actions">
-              <button type="button" class="icon-button">
-                <span class="material-icons">playlist_add</span>
-              </button>
-              <button type="button" class="icon-button">
-                <span class="material-icons">play_arrow</span>
-              </button>
-            </div>
-          </li>
+        <ul class="list">        
+        <!-- Exemple avec un lien et un chevron (par exemple dans la liste de playlists, le lien qui mène à son contenu-->
         </ul>
 
         <template id="list-item-template">
           <li>
             <div class="list-item-title"></div>
             <div class="list-item-actions">
-              <button type="button" class="icon-button">
-                <span class="material-icons">playlist_add</span>
+              <button type="button" class="icon-button fav-button">
+                <span class="material-icons">favorite_border</span>
               </button>
               <button type="button" class="icon-button play-icon">
                 <span class="material-icons">play_arrow</span>
@@ -265,8 +197,8 @@
           <span>Musique</span>
         </a>
         <a href="#list">
-          <span class="material-icons">playlist_play</span>
-          <span>Playlists</span>
+          <span class="material-icons">favorite</span>
+          <span>Favoris</span>
         </a>
       </nav>
     </footer>
